assets/css/style.css
/* ... */
a {
  text-decoration: none;
  color: inherit;
}

button {
  border: none;
  font: inherit;
  color: inherit;
  background-color: transparent;
}

:root {
  /* Color names */
  --white: #fbfbfe;
  --off-white: #efeff3;
  --light-gray: #e7e7ea;
  --soft-gray: #d0d0d3;
  --mid-gray: #a0a0a3;
  --dark-gray: #656567;
  --black-gray: #303042;
  --black: #19191c;
  --slate-blue: #5a4ba8;
  --light-slate-blue: #a18edf;
  --transparent-white: #fbfbfee0;
  --transparent-off-white: #efeff3a0;

  /* Semantic variables*/
  --background-color-primary: var(--white);
  --background-color-secondary: var(--off-white);
  --background-color-tertiary: var(--light-gray);
  --text-color-primary: var(--black);
  --text-color-secondary: var(--black-gray);
  --text-color-tertiary: var(--dark-gray);
  --accent-color: var(--slate-blue);
  --accent-color-light: var(--light-slate-blue);
  --card-border-radius: 6px;

  /* Font sizing */
  /* @link https://utopia.fyi/type/calculator?c=320,16,1.2,1240,20,1.333,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */

  --step--2: clamp(0.6944rem, 0.6913rem + 0.0157vw, 0.7035rem);
  --step--1: clamp(0.8333rem, 0.797rem + 0.1816vw, 0.9377rem);
  --step-0: clamp(1rem, 0.913rem + 0.4348vw, 1.25rem);
  --step-1: clamp(1.2rem, 1.0378rem + 0.8109vw, 1.6663rem);
  --step-2: clamp(1.44rem, 1.1683rem + 1.3585vw, 2.2211rem);
  --step-3: clamp(1.728rem, 1.2992rem + 2.1439vw, 2.9607rem);
  --step-4: clamp(2.0736rem, 1.4221rem + 3.2575vw, 3.9467rem);
  --step-5: clamp(2.4883rem, 1.5239rem + 4.8219vw, 5.2609rem);

  /* Spacing and sizing */
  --content-width-constrained: clamp(300px, 90%, 900px);
  --content-width-full: max(300px, 100%);
  --page-layout-wide: clamp(300px, 95vw, 1200px);
  --page-layout-default: clamp(300px, 95vw, 900px);
  --page-layout-narrow: clamp(300px, 95vw, 640px);
  --fluid-spacing: clamp(1rem, 5vw, 3rem);
  --spacing-l: clamp(1rem, 3vw, 1.5rem);
  --spacing-m: clamp(0.75rem, 2vw, 1rem);
  --spacing-s: clamp(0.5rem, 1vw, 0.75rem);
  --icon-sizing-big: clamp(3rem, 2rem + 3vw, 3.75rem);

  /* Fallback values */
  --navbar-height: 77px;
  --footer-height: 43px;
}

html {
  scroll-behavior: smooth;
  overflow: auto;
  scroll-snap-type: y proximity;
  scroll-padding-top: var(--navbar-height);
}

body {
  background-color: var(--background-color-primary);
  color: var(--text-color-primary);
  font-family: 'Inter', sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  line-height: 1.33;
}

li {
  list-style-type: none;
}

a {
  text-decoration: none;
}

h2 {
  font-size: var(--step-3);
  margin: 0.5em auto;
}

h3 {
  font-size: var(--step-2);
  text-align: center;
  margin: 0.5em auto;
}

/* Navbar */

#navbar {
  font-size: 1em;
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  background-color: var(--transparent-off-white);
  backdrop-filter: blur(15px);
  padding: var(--spacing-s) var(--spacing-m);
  z-index: 1;
}

.nav-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: var(--page-layout-wide);
}

.nav-list,
.nav-home {
  display: flex;
  place-content: center;
  gap: 0.5em;
}

.nav-toggle {
  display: none;
}

.navbar-item {
  position: relative;
  padding: var(--spacing-m);
  display: inline-block;
  text-align: center;
  border-radius: 4px;
  background-color: inherit;
  transition: box-shadow 500ms ease, background-color 500ms ease;
}

.navbar-item::after {
  content: '';
  position: absolute;
  left: 50%;
  bottom: 9px;
  width: 0%;
  height: 2px;
  background: var(--accent-color-light);
  transition: width ease-in 200ms;
  transform: translateX(-50%);
}

.navbar-item:hover {
  color: var(--accent-color);
}

.navbar-item:hover::after {
  width: 70%;
  transform: translateX(-50%);
}

.navbar-item.active {
  background-color: var(--white);
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
}

.navbar-brand {
  font-weight: 600;
  text-transform: uppercase;
}

/* Styling by section*/

/* Header */

#hero {
  min-height: 100svh;
  justify-content: safe center;
  background-color: var(--background-color-primary);
  width: var(--content-width-full);
  padding: var(--spacing-m);
  padding-top: var(--navbar-height);
  background-size: cover;
  color: var(--primary-color);

  & svg {
    width: var(--icon-sizing-big);
    height: auto;
  }

  & h1 {
    font-size: inherit;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
  }

  & .header-content {
    flex: 1;
    text-align: left;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: var(--spacing-m);
  }

  & #header-pre {
    font-size: var(--step-1);
    font-weight: 500;
    color: var(--text-color-secondary);
  }
  & #header-title {
    font-size: var(--step-5);
    font-weight: 700;
    line-height: 1.2;
  }

  & #header-nombre {
    font-size: var(--step-3);
    font-weight: 800;
    text-transform: none;
  }

  & .header-desc {
    font-size: var(--step-1);
    color: var(--text-color-secondary);
  }

  & .header-links {
    display: flex;
    gap: 0.75rem;
  }
}

.scroll-button {
  font-size: var(--step-0);
  display: flex;
  flex-direction: column;
  align-items: center;
  color: var(--text-color-primary);
}

.scroll-arrow {
  aspect-ratio: 1;
  width: 2rem;
  flex: 1;
}

/* Portfolio */

#portfolio {
  text-align: center;
  background-color: var(--background-color-secondary);
}

.project-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: max-content;
  gap: 0.5rem;
  width: var(--page-layout-wide);
}
/* ... */

